kustomize/myjava/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: myapp
  name: myjava
spec:
  selector:
    matchLabels:
      app: myjava
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: myjava
    spec:
      containers:
      - image: myjavatest:1.0.0
        name: myjava
        ports:
        - name: myhttpport
          containerPort: 8080
        resources:
          limits:
            cpu: 250m
            memory: 300Mi
          requests:
            cpu: 200m
            memory: 250Mi
        # SONDA PER CONTROLLARE LO STATO DELL' APPLICAZIONE BACKEND
        livenessProbe:
          httpGet:
            path: /health/check
            port: myhttpport
          failureThreshold: 3
          initialDelaySeconds: 180
          periodSeconds: 60
