kustomize/myjava/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: myapp
  name: myjava
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: myhttpport
  selector:
    app: myjava
